<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".02"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".27"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        />








    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="-0.83"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="-0.86"
        />












    <ImageView
        android:id="@+id/logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/top"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/segitiga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@id/left"
        app:layout_constraintTop_toTopOf="@id/bottom2"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="SISTEM INFORMASI"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@id/bottom3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="GENERATE JADWAL"
        android:textColor="@color/black"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="@id/bottom4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="Home / Jadwal Dosen"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.250" />

    <TextView
        android:id="@+id/xml_text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Date"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.310" />

    <TextView
        android:id="@+id/dsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="2dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Pencarian Jadwal Dosen"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.310" />

    <ImageView
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:src="@drawable/upb"
        app:layout_constraintBottom_toBottomOf="@id/bottom5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/left2"
        app:layout_constraintTop_toTopOf="parent"/>


    <!--Table-->
    <TableLayout
        android:layout_width="900dp"
        android:layout_height="150dp"

        android:background="@color/abu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"

        app:layout_constraintStart_toEndOf="@+id/left2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52">
        <!--Table Heading-->

        <TableRow

            android:background="@color/biru">

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:fontFamily="@font/petrona"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/petrona"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/petrona"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col3"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/petrona"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col4"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/petrona"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col5"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold" />

        </TableRow>

        <!--Table data-->

        <!--Row Table-->

        <!--Data 1-->
        <TableRow>

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row1no"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row1nama"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row1mk"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row1kls"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row1jdw"
                android:textColor="@color/black"
                android:textSize="8sp" />
        </TableRow>
        <!--Data 1 selesai-->

        <!--Data 2-->
        <TableRow>

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row2no"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row2nama"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row2mk"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row2kls"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row1jdw"
                android:textColor="@color/black"
                android:textSize="8sp" />
        </TableRow>
        <!--Data 2 Selesai-->

        <!--Data 3-->
        <TableRow>

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row3no"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row3nama"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row3mk"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row3kls"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row1jdw"
                android:textColor="@color/black"
                android:textSize="8sp" />
        </TableRow>
        <!--Data 3 Selesai-->

        <!--Data 4-->
        <TableRow>

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row4no"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row4nama"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row4mk"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row4kls"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="8sp"
                android:text="@string/row1jdw"
                android:textColor="@color/black"
                android:textSize="8sp" />
        </TableRow>
        <!--Data 4 Selesai-->

     </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
